--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 API_TOKEN_STATE=53Q3ffhX9Q8uCE-vJiL-KfbzpYyxFCAoiCJb0p4EN3DiJXEyWwGpX4dio2yGGQ307VA
 USER_EMAIL=shahinhuzzain@gmail.com
 ACCESS_TOKEN_URL_SITE=https://www.universal-tutorial.com/api/getaccesstoken
+OPENAI_API_KEY=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
